# chip8_emu

./: Cargo.toml  README.md
src/: cpu.rs  main.rs
