[package]
name = "ch8_emu"
version = "0.1.1"
edition = "2024"
author  = "Chish"
description = "A simple Chip-8 emulator written in rust"
readme = "README.md"
repository = "https://codeberg.org/chish/chip8_emu"
license = "MIT"

[[bin]]
name = "ch8"
path = "src/main.rs"

[dependencies]
minifb = "0.28.0"
actually_beep = "0.1.1"
clap = { version = "4.6.1", features = ["derive"] }
